adding extra data

--- a/index.html
+++ b/index.html
@@ -84,21 +84,24 @@
                 <span><p>1</p></span>
               </button>
               <button>
-                <img
-                  src="./assets/images/Icon_favourite.svg"
-                  alt="Search Icon"
-                  width="28"
-                  height="28"
-                />
+                <a href="./wishList/wish.html"
+                  ><img
+                    src="./assets/images/Icon_favourite.svg"
+                    alt="Search Icon"
+                    width="28"
+                    height="28"
+                /></a>
                 <span><p>3</p></span>
               </button>
               <button>
-                <img
-                  src="./assets/images/Icon_bag.svg"
-                  alt="Search Icon"
-                  width="28"
-                  height="28"
-                />
+                <a href="./addToCart/cart.html"
+                  ><img
+                    src="./assets/images/Icon_bag.svg"
+                    alt="Search Icon"
+                    width="28"
+                    height="28"
+                  /></a
+                >
                 <span><p>3</p></span>
               </button>
             </div>
@@ -166,7 +169,7 @@
         <div class="container">
           <div class="section2">
             <img
-            class="big"
+              class="big"
               src="./assets/images/discount.png"
               alt="Image"
               width="636"
@@ -223,7 +226,7 @@
               height="370"
             />
             <img
-            class="big"
+              class="big"
               src="./assets/images/mackup.png"
               alt="Site Image"
               width="636"
