--- a/wishList/wish.html
+++ b/wishList/wish.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../assets/styles/styles.css" />
-    <title>Add To Cart</title>
+    <title>Wish List</title>
   </head>
   <body>
     <header class="header">
@@ -129,86 +129,6 @@
             <p>Checkout</p>
           </div>
           <div class="adding__section"></div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="calculate">
-          <div class="calculate__left">
-            <h2>Calculate Shipping</h2>
-            <div class="country">
-              <form class="place">
-                <select
-                  name="country"
-                  id="country"
-                  aria-placeholder="Select country"
-                >
-                  <option value="">Select State</option>
-                  <option value="0">Uzbekistan</option>
-                  <option value="1">Indonesia</option>
-                  <option value="2">Russian</option>
-                  <option value="3">China</option>
-                  <option value="4">London</option>
-                </select>
-                <select
-                  name="country"
-                  id="country"
-                  aria-placeholder="Select country"
-                >
-                  <option value="">Select country</option>
-                  <option value="0">Tashkent</option>
-                  <option value="1">Bukhara</option>
-                  <option value="2">Samarkand</option>
-                  <option value="3">Andijan</option>
-                  <option value="4">Jizzakh</option>
-                </select>
-              </form>
-              <div class="code">
-                <form class="zip">
-                  <input
-                    type="text"
-                    id="zip__code"
-                    placeholder="Postcode / ZIP"
-                  />
-                </form>
-                <button class="estimate__btn">
-                  <a href="#">ESTIMATE</a>
-                </button>
-              </div>
-            </div>
-            <h3>Discount coupon Code</h3>
-            <div class="coupon__holder">
-              <form class="coupon">
-                <input
-                  type="text"
-                  id="coupon__code"
-                  placeholder="coupon Code"
-                />
-              </form>
-              <button class="coupon__btn">
-                <a href="#">APPLY CODE</a>
-              </button>
-            </div>
-          </div>
-          <div class="calculate__right">
-            <div class="total__holder">
-              <div class="product">
-                <p>Product</p>
-                <p>Total</p>
-              </div>
-              <div class="shipping">
-                <p>Shipping</p>
-                <p>Free shipping</p>
-              </div>
-              <div class="total__summa">
-                <p>Total</p>
-                <span>$0</span>
-              </div>
-            </div>
-            <div class="sending">
-              <div class="btn1 btn"><a href="#">UPDATE CART</a></div>
-              <div class="btn2 btn"><a href="#">CHECKOUT</a></div>
-            </div>
-          </div>
         </div>
       </div>
     </main>
